# external-dns-sdk

./: Cargo.toml  README.md
src/: client.rs  lib.rs  provider.rs
tests/: e2e.rs
